trybuild_tests/tests/trybuild/fail/model_fkey_no_type.rs
use butane::{model, ForeignKey};

// This should fail - ForeignKey without type argument
#[model]
struct Post {
    #[pk]
    id: i64,
    blog: ForeignKey,
}

fn main() {}
